linl fix, and navbar tweak

--- a/server-properties-checker.html
+++ b/server-properties-checker.html
@@ -24,7 +24,7 @@
   </main>
 
   <footer>
-    Made with <span>❤</span> for Minecraft Server Admins — <a href="#">GitHub</a>
+    Made with <span>❤</span> for Minecraft Server Admins — <a href="https://github.com/CamoMano/MC-Tools">GitHub</a>
   </footer>
 
   <script>
