--- a/mod-scanner.html
+++ b/mod-scanner.html
@@ -19,7 +19,7 @@
   </main>
 
   <footer>
-    Made with <span>❤</span> for Minecraft Server Admins — <a href="#">GitHub</a>
+    Made with <span>❤</span> for Minecraft Server Admins — <a href="https://github.com/CamoMano/MC-Tools">GitHub</a>
   </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
