--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,7 @@
 <nav class="navbar">
-  <a href="index.html" class="brand">🏠 MC Tools</a>
-  <a href="server-properties-checker.html">Server Properties Checker</a>
-  <a href="view-distance-calculator.html">View Distance Calculator</a>
-  <a href="mod-scanner.html">Mod Scanner</a>
+  <span class="brand">🏠 MC Tools</span>
+  <button onclick="location.href='index.html'">Home</button>
+  <button onclick="location.href='server-properties-checker.html'">Server Properties Checker</button>
+  <button onclick="location.href='view-distance-calculator.html'">View Distance Calculator</button>
+  <button onclick="location.href='mod-scanner.html'">Mod Scanner</button>
 </nav>
