--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>MC Tools - Home</title>
   <base href="./">
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="style.css" />
   <script src="js/loadNavbar.js" defer></script>
 </head>
 <body>
@@ -19,23 +19,30 @@
 
     <section class="tools-list">
       <h2>Available Tools</h2>
+
       <div class="tool-card">
-        <h3><a href="server-properties-checker.html">Server Properties Checker</a></h3>
+        <h3>Server Properties Checker</h3>
         <p>Analyze and optimize your <code>server.properties</code> file.</p>
+        <button type="button" onclick="location.href='server-properties-checker.html'">Open</button>
       </div>
+
       <div class="tool-card">
-        <h3><a href="view-distance-calculator.html">View Distance Calculator</a></h3>
+        <h3>View Distance Calculator</h3>
         <p>Calculate the optimal view distance for your server setup.</p>
+        <button type="button" onclick="location.href='view-distance-calculator.html'">Open</button>
       </div>
+
       <div class="tool-card">
-        <h3><a href="mod-scanner.html">Mod Scanner</a></h3>
+        <h3>Mod Scanner</h3>
         <p>Scan your modpack for client-side-only mods.</p>
+        <button type="button" onclick="location.href='mod-scanner.html'">Open</button>
       </div>
     </section>
   </main>
 
   <footer>
-    Made with <span>❤</span> for Minecraft Server Admins — <a href="https://github.com/CamoMano/MC-Tools">GitHub</a>
+    Made with <span>❤</span> for Minecraft Server Admins — 
+    <a href="https://github.com/CamoMano/MC-Tools" target="_blank" rel="noopener noreferrer">GitHub</a>
   </footer>
 </body>
 </html>
