--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,9 @@
 <nav class="navbar">
-  <span class="brand">🏠 MC Tools</span>
+  <span class="brand">⛏️ MC Tools</span>
   <button onclick="location.href='index.html'">Home</button>
   <button onclick="location.href='server-properties-checker.html'">Server Properties Checker</button>
   <button onclick="location.href='view-distance-calculator.html'">View Distance Calculator</button>
   <button onclick="location.href='mod-scanner.html'">Mod Scanner</button>
+  <button onclick="location.href='crash-analyzer.html'">Crash Analyzer</button>
+  <button onclick="location.href='ram-calculator.html'">RAM Calculator</button>
 </nav>
