--- a/view-distance-calculator.html
+++ b/view-distance-calculator.html
@@ -4,7 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>View Distance Calculator - MC Tools</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="style.css"/> 
+  <link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
+  <link rel="shortcut icon" href="/assets/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="MC Tools" />
+  <link rel="manifest" href="/assets/site.webmanifest" />
 </head>
 <body>
   <div id="navbar"></div>
@@ -41,7 +47,7 @@
         <ul>
           <li><strong>View Distance:</strong> ${viewDistance}</li>
           <li><strong>Chunks Loaded (Square Area):</strong> ${diameter} × ${diameter}</li>
-          <li><strong>Total Chunks:</strong> ${totalChunks}</li>
+          <li><strong>Total Chunks:</strong> ~${totalChunks} per player</li>
         </ul>
       `;
     }
