formatting, fixes, and improvements
- added more detections to the modscanner
- improved crash analyzer
- corrected RAM calculation for neoforge server type
- improved formatting

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -14,6 +15,7 @@
   <meta name="apple-mobile-web-app-title" content="MC Tools" />
   <link rel="manifest" href="/assets/site.webmanifest" />
 </head>
+
 <body>
   <div id="navbar"></div>
 
@@ -52,15 +54,17 @@
 
       <div class="tool-card">
         <h3>RAM Calculator</h3>
-        <p>Estimate the recommended RAM for your Minecraft server based on version, players, mods, plugins, and server type.</p>
+        <p>Estimate the recommended RAM for your Minecraft server based on version, players, mods, plugins, and server
+          type.</p>
         <button type="button" onclick="location.href='ram-calculator.html'">Open</button>
       </div>
     </section>
   </main>
 
   <footer>
-    Made with <span>❤</span> for Minecraft Server Admins — 
+    Made with <span>❤</span> for Minecraft Server Admins —
     <a href="https://github.com/CamoMano/MC-Tools" target="_blank" rel="noopener noreferrer">GitHub</a>
   </footer>
 </body>
+
 </html>
